--- a/app/src/main/res/layout/fragment_login_dialog.xml
+++ b/app/src/main/res/layout/fragment_login_dialog.xml
@@ -31,13 +31,13 @@
                 android:textColor="@color/purple_700"/>
 
             <EditText
-                android:id="@+id/et_username"
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/rectangle_style"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="8dp"
-                android:hint="username"
+                android:hint="Email"
                 android:padding="8dp"
                 android:textColor="@color/purple_700"
                 android:textColorHighlight="@color/cardview_dark_background"
