--- a/app/src/main/res/layout/progress_layout.xml
+++ b/app/src/main/res/layout/progress_layout.xml
@@ -22,7 +22,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Saving..."
+        android:text="Login..."
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
