--- a/app/src/main/res/layout/fragment_login_dialog.xml
+++ b/app/src/main/res/layout/fragment_login_dialog.xml
@@ -1,99 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
+        android:background="@drawable/rectangle_style"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:background="@drawable/rectangle_style">
+        app:cardElevation="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
             android:padding="24dp">
 
             <TextView
+                android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="LOGIN"
-                android:id="@+id/loginText"
-                android:textSize="36dp"
                 android:textAlignment="center"
-                android:textStyle="bold"
-                android:textColor="@color/purple_700"/>
+                android:textColor="@color/purple_700"
+                android:textSize="36dp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@drawable/rectangle_style"
-                android:drawableLeft="@drawable/ic_baseline_person_24"
-                android:drawablePadding="8dp"
-                android:hint="Email"
-                android:padding="8dp"
-                android:textColor="@color/purple_700"
-                android:textColorHighlight="@color/cardview_dark_background"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginBottom="4dp"
+                android:autofillHints=""
+                android:background="@drawable/rectangle_style"
+                android:drawableLeft="@drawable/ic_baseline_person_24"
+                android:drawablePadding="8dp"
+                android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
-                android:autofillHints="" />
+                android:padding="8dp"
+                android:textColor="@color/purple_700"
+                android:textColorHighlight="@color/cardview_dark_background" />
 
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="4dp"
+                android:autofillHints=""
                 android:background="@drawable/rectangle_style"
                 android:drawableLeft="@drawable/ic_baseline_lock_24"
                 android:drawablePadding="8dp"
                 android:hint="password"
-                android:padding="8dp"
-                android:textColor="@color/purple_700"
-                android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginBottom="4dp"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
-                android:autofillHints="" />
+                android:padding="8dp"
+                android:textColor="@color/purple_700"
+                android:textColorHighlight="@color/cardview_dark_background" />
+
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="login"
-                android:textSize="24sp"
-                app:cornerRadius = "200dp"
-                android:drawablePadding="8dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginBottom="4dp"
-                android:textColor="#ffff"/>
+                android:drawablePadding="8dp"
+                android:text="login"
+                android:textColor="#ffff"
+                android:textSize="24sp"
+                app:cornerRadius="200dp" />
 
-            <TextView
-                android:id="@+id/tv_signup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="喂!點我註冊!!"
-                android:textSize="18sp"
-                app:layout_constraintVertical_bias="0.68"
-                android:layout_gravity="center_horizontal"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="25dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/checkBoxRemember"
+                    android:layout_width="149dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="記住帳密"
+                    android:textSize="18sp"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+                <TextView
+                    android:id="@+id/tv_signup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="喂!點我註冊!!"
+                    android:textSize="18sp"
+                    app:layout_constraintVertical_bias="0.68" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 
 </LinearLayout>
